# 3D_segmentation_model

./: CMakeLists.txt  README.md  package.xml
include/: build_dataset.h  filter_cloud.h
src/: build_dataset.cpp  filter_cloud.cpp
